# ispartialinformation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
conf/: config.yaml
data/: column_rename.json  id_to_label.json  label_to_id.json
data/archive/: nagara.xlsx  nagara_all.json  nagara_all.xlsx  nagara_feature_counted.xlsx  nagara_test.json  nagara_test.jsonl  nagara_train.json  nagara_train.jsonl  nagara_val.json  nagara_val.jsonl  test.json  tokorode.json  tokorode.xlsx  tokorode_all.json  tokorode_all.xlsx  tokorode_test.json  tokorode_test.jsonl  tokorode_train.json  tokorode_train.jsonl  tokorode_val.json  tokorode_val.jsonl  train.json  tsutsu.xlsx  tsutsu_all.json  tsutsu_all.xlsx  tsutsu_feature_counted.xlsx  tsutsu_test.json  tsutsu_test.jsonl  tsutsu_train.json  tsutsu_train.jsonl  tsutsu_val.json  tsutsu_val.jsonl  valid.json
data/error_analysis/: error_analysis.html  former-only.csv  latter-only.csv  normal.csv  ordinal_forms.csv  ordinal_formsのコピー.txt  original_forms_shuffle.csv  original_forms_shuffleのコピー.txt  pos_sequence.csv  true_false.csv  true_false_pivot.csv  true_false_pivot.xlsx  true_false_pivot_with_sentence.xlsx
data/kwdlc_processed/: disc_expert.csv
data/pos_data/: pos_dict.json  test.json  train.json  valid.json
data/prompts/: template.txt
data/statistics/: operation_count.csv
results/multiple_experiments/: all_label_ci.csv  concession_ci.csv  multiple_exps_all_label_ci.csv  multiple_exps_concession_ci.csv
results/predictions/: test_predictions_from_wandb.csv
shell_scripts/: run_all_experiment_types.sh
src/: count_feature.py  evaluation.py  fine_tuning.py  log.py  preprocess_data.py  process_data.py  run_multiple_experiments.py  utils.py
src/visualization/: visualize_degrade.py  visualize_score.py
wandb/: latest-run
wandb/run-20240429_125209-w062bn0y/: run-w062bn0y.wandb
wandb/run-20240429_130237-ifqlqukr/: run-ifqlqukr.wandb
(+9148 files in other folders)
